# mcp-protect

./: .gitignore  .gitmodules  README.md
prime-envs/: AGENTS.md  README.md  pyproject.toml
prime-envs/environments/mcp_safety/: README.md  mcp_safety.py  pyproject.toml
prime-envs/environments/mcp_safety/.prime/: .env-metadata.json
prime-envs/environments/mcp_safety/outputs/evals/mcp-safety--openai--gpt-4.1-mini/27657b79/: metadata.json  results.jsonl
prime-envs/environments/mcp_tox/: README.md  mcp_tox.py  pyproject.toml
prime-envs/environments/mcp_tox/.prime/: .env-metadata.json
prime-envs/environments/mcp_tox/outputs/evals/mcp-tox--google--gemini-2.5-flash/077cefe6/: metadata.json  results.jsonl
prime-envs/environments/mcp_tox/outputs/evals/mcp-tox--google--gemini-2.5-flash/3a6acce0/: metadata.json  results.jsonl
prime-envs/environments/mcp_tox/outputs/evals/mcp-tox--openai--gpt-4-1-mini/294cf6ec/: metadata.json  results.jsonl
prime-envs/environments/mcp_tox/outputs/evals/mcp-tox--openai--gpt-4.1-mini/6ebfe0cc/: metadata.json  results.jsonl
prime-envs/environments/mcp_tox/outputs/evals/mcp-tox--openai--gpt-4.1-mini/ec7baff6/: metadata.json  results.jsonl
prime-envs/environments/mcp_tox/outputs/evals/mcp-tox--openai--gpt-5-mini/72f49af0/: metadata.json  results.jsonl
prime-envs/environments/mcp_tox/outputs/evals/mcp-tox--openai--gpt-5-mini/bf7eb395/: metadata.json  results.jsonl
prime-envs/environments/open_prompt_injection/: README.md  open_prompt_injection.py  pyproject.toml
prime-envs/environments/open_prompt_injection/.prime/: .env-metadata.json
