[project]
name = "mcp-safety"
description = "MCP-SafetyBench environment: evaluates model resistance to 20 attack types across 5 MCP domains"
tags = ["mcp", "safety", "tool-poisoning", "single-turn", "llm-judge", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mcp_safety.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 50
rollouts_per_example = 1
