[project]
name = "open-prompt-injection"
description = "Open-Prompt-Injection environment: evaluates model resistance to prompt injection attacks across 7 NLP tasks and 5 attack strategies"
tags = ["prompt-injection", "safety", "single-turn", "llm-judge", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
    "openai",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["open_prompt_injection.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 50
rollouts_per_example = 1
